fix(sprite): fix icons id's

--- a/staticErrors/50X.html
+++ b/staticErrors/50X.html
@@ -80,8 +80,8 @@
 <body>
   <a href="/">
     <picture>
-      <source srcset="./images/logo_short.svg" media="(max-width: 767px)">
-      <img class="logo" srcset="./images/logo_full.svg" alt="Просто спросить">
+      <source srcset="./images/logo-short.svg" media="(max-width: 767px)">
+      <img class="logo" srcset="./images/logo-full.svg" alt="Просто спросить">
     </picture>
   </a>
   <div class="container">
