--- a/staticErrors/50X.html
+++ b/staticErrors/50X.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial=scale=1">
-  <title>Временные технические неполадки | Просто спросить</title>
+  <title>Временные технические неполадки | Что делать?</title>
   <style type="text/css">
     @font-face {
       font-family: 'Muller Regular';
